# cosmwasm-template

./: .gitignore  Cargo.toml  README.md  command.js  injective.md
examples/: schema.rs
src/: contract.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
